[package]
name = "red-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "RedBrowser server — content proxy for web, Instagram, Telegram, WhatsApp over DNS tunnel"

[[bin]]
name = "red-server"
path = "src/main.rs"

[dependencies]
red-protocol = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "json"] }
scraper = "0.22"
url = "2"
image = { version = "0.25", default-features = false, features = ["webp", "jpeg", "png", "gif"] }
base64 = "0.22"
regex = "1"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
lru = "0.12"
